# rkns-python

./: .gitignore  CONTRIBUTING.md  LICENSE-EUPL.md  LICENSE.md  Makefile  README.md  example_usage.py  pyproject.toml  requirements.txt  sequence_diagram.md  test_rkns.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality.yml  pytest.yml  unit-tests-internal-dependencies.yml  unit-tests.yml
rkns/: RKNS.py  RKNSAdapter.py  RKNSUtils.py  errors.py  file_formats.py  handler.py  lazy.py  rkns.py  rkns_adapter.py  rkns_util.py  util.py
rkns/_zarr/: __init__.py  adapter.py  generics.py  storehandler_interface.py  storehandler_zarr_v2.py  storehandler_zarr_v3.py  types.py  utils_interface.py  utils_zarr_v2.py  utils_zarr_v3.py
rkns/adapters/: __init__.py  base.py  edf_adapter.py  registry.py
rkns/detectors/: __init__.py  edf_detector.py  registry.py  rkns_detector.py
rkns/util/: __init__.py  misc.py  rkns_util.py  zarr_util.py
rkns/zarr/: handler.py  types.py  zarr_util.py
test/: test_rkns.py
tests/: test_lazy.py  test_raw_from_file.py  test_rkns_from_file.py  test_util.py  test_zarr_util.py  test_zarr_utils_v2.py  test_zarr_utils_v3.py
