[tool.poetry]
name = "rkns"
version = "0.3.1"
description = "RKNS data format for ExG data"
authors = ["Fabricio Arend Torres <fabricio.arendtorres[at]rekonas[dot]com>", "Patrick Kahr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zarr = ">=3"
pyEDFlib = "^0.1.37"
numpy = "^1.26.4"
minio = "^7.2.7"
rich = "^13.9.4"

[tool.poetry.group.test.dependencies]  
pytest-asyncio = ">=0.25.3"
pytest-mock = ">=3.14.0"
pytest-cov = ">=6.0.0"
pytest = ">=8.3.5"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ruff = ">=0.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.ruff]
# Exclude tests directory from linting
#exclude = ["tests/"]
