[tool.poetry]
name = "rkns"
version = "0.3.1"
description = "RKNS data format for ExG data"
authors = ["Fabricio Arend Torres <fabricio.arendtorres[at]rekonas[dot]com>", "Patrick Kahr"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
zarr = ">=2"
pyEDFlib = "^0.1"
numpy = ">=2" # 2.0.2
minio = "^7.2" 
rich = "^13.9" # 13.7.1

[tool.poetry.group.test.dependencies]  
pytest-asyncio = ">=0.25"
pytest-mock = ">=3.14"
pytest-cov = ">=6.0"
pytest = ">=8.3"


[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13"
ruff = ">=0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.ruff]
# Exclude tests directory from linting
#exclude = ["tests/"]
